--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,113 +1,121 @@
 @import "./reset.scss";
 
 body {
-  background-color: #dce6d1;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: #d7dbdb;
 }
-
 .phone {
-  background-color: black;
-  border-radius: 50px;
-  height: 90vh;
-  width: 420px;
-  padding: 50px 20px;
-  box-sizing: border-box;
+  border-radius: 10px;
+  box-shadow: 10px 20px 50px grey;
+  background-color: #d7dbdb;
+  width: 320px;
+  height: 63vh;
 }
 .header {
-  overflow-x: scroll;
-  .header__list {
-    display: flex;
-    color: white;
-    gap: 10px;
-    width: max-content;
-    .herder__list-item {
-      border: 1px solid rgba($color: #fff, $alpha: 0.5);
-      padding: 10px;
-      border-radius: 20px;
-      &:nth-child(1) {
-        color: black;
-        background-color: white;
+  margin-top: 20px;
+  padding: 15px 15px;
+  display: flex;
+  justify-content: space-between;
+  .header__title {
+    font-weight: bold;
+  }
+}
+.totla {
+  background-color: black;
+  padding: 25px;
+  color: #d7dbdb;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 5px;
+  .totla__price {
+    font-size: 25px;
+    font-weight: bold;
+  }
+  .total__subtitle {
+    font-size: 13px;
+  }
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  .main-item {
+    border-top: 5px solid black;
+    position: relative;
+    display: grid;
+    grid-template: 3fr 1fr / 1fr 1fr;
+    .main__topLeft {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      padding: 20px 13px;
+      .topLeft__title {
+        font-size: 30px;
+        margin-bottom: 5px;
+        font-weight: 900;
+      }
+      .topLeft__subtitle {
+        font-size: 13px;
+      }
+    }
+    .main__topRight {
+      grid-column: 2 / -1;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      padding: 20px 13px;
+      align-items: flex-end;
+      .topRight_title {
+        font-size: 23px;
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+      .topRight_subtitle {
+        font-size: 13px;
+      }
+    }
+    .main__bottom {
+      grid-column: 1 / -1;
+      display: flex;
+      border-top: 5px solid black;
+      border-bottom: 5px solid black;
+      justify-content: flex-start;
+      font-size: 13px;
+      .bottomLeft {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      .bottomRight {
+        width: 25%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        border-left: 2.5px solid black;
       }
     }
   }
-}
-.main {
-  margin-top: 20px;
-  background-color: black;
+  .item__photo {
+    position: absolute;
+    width: 14%;
+    border: 5px solid black;
+    right: 35.5%;
+    bottom: 45.7%;
+  }
 
-  .cards {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-
-    .cards__item {
-      border-radius: 25px;
-      padding: 18px 15px;
-      background-color: white;
-      display: flex;
-      gap: 10px;
-      flex-direction: column;
-      justify-content: space-between;
-      .item-title {
-        font-size: 30px;
-      }
-      .card__footer {
-        font-size: 12px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        span {
-          border: 1px solid black;
-          border-radius: 20px;
-          padding: 10px 12px;
-        }
-        .item-price {
-          background-color: #e9affc;
-        }
-        .item-lenght {
-          background-color: white;
-        }
-      }
-      &:nth-child(1) {
-        background-color: #272c30;
-        color: white;
-        border: 1px solid white;
-        span {
-          color: black;
-        }
-      }
-      &:nth-child(2) {
-        background-color: #f6f2ef;
-        .item-price {
-          background-color: #ffdd2d;
-        }
-      }
-      &:nth-child(3) {
-        background-color: #f8fcb2;
-      }
-      &:nth-child(4) {
-        background-color: #b09df6;
-        .item-price {
-          background-color: #ffdd2d;
-        }
-      }
-      &:nth-child(5) {
-        background-color: #fed2d2;
-      }
-      &:nth-child(6) {
-        background-color: #d3ffe0;
-        .item-price {
-          background-color: #ffdd2d;
-        }
-      }
-
-      &:nth-child(3n) {
-        grid-column: span 2;
-      }
-    }
+  .item__photo2 {
+    position: absolute;
+    width: 14%;
+    border: 5px solid black;
+    right: 35.5%;
+    bottom: 20.8%;
   }
 }
